--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.10.0",
     "@types/bad-words": "^3.0.1",
     "bad-words": "^3.0.4",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "firebase-admin": "^11.5.0"
+    "firebase-admin": "^11.5.0",
+    "mongodb": "^5.1.0"
   },
   "type": "module"
 }
